--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "ant-design-vue": "^1.4.12",
+    "ant-design-vue": "1.4.11",
     "core-js": "^3.6.4",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
